fix the problem that picture too large

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   text-align: center;
+  background-color: white;
 }
 
 h1 {
@@ -39,6 +40,12 @@ class selectors
   position: absolute;
 }
 */
+.city {
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+  overflow: hidden;
+}
 
 .header {
   width: 30%;
@@ -46,6 +53,7 @@ class selectors
 }
 
 .top-container {
+  width: 100%;
   background: black;
   position: relative;
   padding-top: 100px;
@@ -71,6 +79,7 @@ class selectors
 }
 
 .bottom-container {
+  width: 100%;
   background-color: black;
   padding: 50px 0 20px;
 }
@@ -108,7 +117,7 @@ a:hover {
 .btn {
   background: #11cdd4;
   background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -moz-linear-gradient(top, #11cdd4, #11999e); 
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
   background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
   background-image: -o-linear-gradient(top, #11cdd4, #11999e);
   background-image: linear-gradient(to bottom, #11cdd4, #11999e);
